@@ -12,7 +12,7 @@ release_tests  = 1
 installer      = Author::Plicease::MakeMaker
 test2_v0       = 1
 irc            = irc://irc.perl.org/#native
-diag = +Alien::nragent
+diag           = +Alien::nragent
 
 [RemovePrereqs]
 remove = strict
@@ -23,6 +23,9 @@ remove = Exporter
 remove = Carp
 remove = Time::HiRes
 remove = Alien::nragent
+
+[Prereqs / ConfigureRequires]
+FFI::CheckLib = 0
 
 [Author::Plicease::Upload]
 cpan = 1
